test/instance-checks-2.err.expect
test/instance-checks-2.ktn:1:1: error: cannot match scalar type t1 with t2
test/instance-checks-2.ktn:1:1: note: t1 (type of x) is from here
test/instance-checks-2.ktn:1:1: note: t2 (from example) is from here
